--- a/views/learn.ejs
+++ b/views/learn.ejs
@@ -1,165 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Courseify</title> 
-    
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">  
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/styles.css"> 
-</head>
-<body>
-<div id="nav">
-    <img id="logo" src="courseify.png">
-</div>
-
-   <img id="logo" src="courseify.png">
-   <div id="photos"> 
-       <h1 class="title">Quiz Questions</h1> 
-       <ul class="list"> 
-           <li class="list"> Question 1) <%= prob1 %></li> 
-           <li class="list"> Question 2) <%= prob2 %></li> 
-           <li class="list"> Question 3) <%= prob3 %></li> 
-            
-       </ul> 
-       <div class=accord> 
-        <button class="accordion">⚪ Answer 1</button>
-        <div class="panel">
-          <p class="links"><%= ans1 %></p>
-        </div>
-        
-        <button class="accordion">⚪ Answer 2</button>
-        <div class="panel">
-            <p class="links"><%= ans2 %></p>
-        </div>
-        
-        <button class="accordion"> ⚪Answer 3</button>
-        <div class="panel">
-            <p class="links"><%= ans3 %></p>
-        </div> 
- 
-       </div>
-   </div> 
-   
-   
-
-
-   <iframe id="iframe" src=<%= video1 %>></iframe>  
-
-   <div class=sliderThing> 
-
-
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
-          <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
-          <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <div class="carousel-item active" style="background-color: black;" >
-            <h1 class="slidertext" ><%= web1t %></h1> 
-            <p class="smallstuff"> <%= web1desc %></p> 
-            <p class="smallstuff"><a href=<%= web1url %> target="_blank"><%= web1url %></a></p>
-          </div>
-          <div class="carousel-item" style="background-color: black;" >
-            <h1 class="slidertext" ><%= web2t %></h1> 
-            <p class="smallstuff"> <%= web2desc %></p> 
-            <p class="smallstuff"><a href=<%= web2url %> target="_blank"><%= web2url %></a></p>
-          </div>
-          <div class="carousel-item" style="background-color: black;" >
-            <h1 class="slidertext" ><%= web3t %></h1> 
-            <p class="smallstuff"> <%= web3desc %></p> 
-            <p class="smallstuff"><a href=<%= web3url %> target="_blank"><%= web3url %></a></p>
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </a>
+   <head>
+      <meta charset="UTF-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Courseify</title>
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com">
+      <link href="https://fonts.googleapis.com/css2?family=DM+Sans&display=swap" rel="stylesheet">
+      <!-- Bootstrap CSS -->
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+      <link rel="stylesheet" href="/css/styles.css">
+   </head>
+   <body>
+      <div id="nav">
+         <img id="logo" src="courseify.png">
       </div>
-
-
-
-
-   </div> 
-   
-  
-
-
-
-
-
-
-
-   
-   
-
-
-   
-     
-<script> 
-
-var acc = document.getElementsByClassName("accordion");
-var i;
-
-for (i = 0; i < acc.length; i++) {
-  acc[i].addEventListener("click", function() {
-    /* Toggle between adding and removing the "active" class,
-    to highlight the button that controls the panel */
-    this.classList.toggle("active");
-
-    /* Toggle between hiding and showing the active panel */
-    var panel = this.nextElementSibling;
-    if (panel.style.display === "block") {
-      panel.style.display = "none";
-    } else {
-      panel.style.display = "block";
-    }
-  });
-}
-
-
-</script> 
-<style>
-    .panel {
-      padding: 0 18px;
-      background-color: white;
-      max-height: 0;
-      overflow: hidden;
-      transition: max-height 0.2s ease-out;
-    }
-    </style>
-    
-    <script>
-    var acc = document.getElementsByClassName("accordion");
-    var i;
-    
-    for (i = 0; i < acc.length; i++) {
-      acc[i].addEventListener("click", function() {
-        this.classList.toggle("active");
-        var panel = this.nextElementSibling;
-        if (panel.style.maxHeight) {
-          panel.style.maxHeight = null;
-        } else {
-          panel.style.maxHeight = panel.scrollHeight + "px";
-        }
-      });
-    }
-    </script>
-
-
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-
-</body>
-</html> 
+      <img id="logo" src="courseify.png">
+      <div id="photos">
+         <h1 class="title">Quiz Questions</h1>
+         <ul class="list">
+            <li class="list"> Question 1) <%= prob1 %>
+            </li>
+            <li class="list"> Question 2) <%= prob2 %>
+            </li>
+            <li class="list"> Question 3) <%= prob3 %>
+            </li>
+         </ul>
+         <div class=accord>
+            <button class="accordion">⚪ Answer 1</button>
+            <div class="panel">
+               <p class="links"><%= ans1 %>
+               </p>
+            </div>
+            <button class="accordion">⚪ Answer 2</button>
+            <div class="panel">
+               <p class="links"><%= ans2 %>
+               </p>
+            </div>
+            <button class="accordion"> ⚪Answer 3</button>
+            <div class="panel">
+               <p class="links"><%= ans3 %>
+               </p>
+            </div>
+         </div>
+      </div>
+      <iframe id="iframe" src=<%= video1 %>>
+      </iframe>
+      <div class=sliderThing>
+         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <ol class="carousel-indicators">
+               <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
+               <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
+               <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+               <div class="carousel-item active" style="background-color: black;" >
+                  <h1 class="slidertext" ><%= web1t %>
+                  </h1>
+                  <p class="smallstuff"><%= web1desc %>
+                  </p>
+                  <p class="smallstuff">
+                     <a href=<%= web1url %> target="_blank"><%= web1url %>
+                     </a>
+                  </p>
+               </div>
+               <div class="carousel-item" style="background-color: black;" >
+                  <h1 class="slidertext" ><%= web2t %>
+                  </h1>
+                  <p class="smallstuff"><%= web2desc %>
+                  </p>
+                  <p class="smallstuff">
+                     <a href=<%= web2url %> target="_blank"><%= web2url %>
+                     </a>
+                  </p>
+               </div>
+               <div class="carousel-item" style="background-color: black;" >
+                  <h1 class="slidertext" ><%= web3t %>
+                  </h1>
+                  <p class="smallstuff"><%= web3desc %>
+                  </p>
+                  <p class="smallstuff">
+                     <a href=<%= web3url %> target="_blank"><%= web3url %>
+                     </a>
+                  </p>
+               </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+            </a>
+         </div>
+      </div>
+      <script> 
+         var acc = document.getElementsByClassName("accordion");
+         var i;
+         
+         for (i = 0; i < acc.length; i++) {
+           acc[i].addEventListener("click", function() {
+             /* Toggle between adding and removing the "active" class,
+             to highlight the button that controls the panel */
+             this.classList.toggle("active");
+         
+             /* Toggle between hiding and showing the active panel */
+             var panel = this.nextElementSibling;
+             if (panel.style.display === "block") {
+               panel.style.display = "none";
+             } else {
+               panel.style.display = "block";
+             }
+           });
+         }
+         
+         
+         
+         												
+      </script>
+      <style>
+         .panel {
+         padding: 0 18px;
+         background-color: white;
+         max-height: 0;
+         overflow: hidden;
+         transition: max-height 0.2s ease-out;
+         }
+      </style>
+      <script>
+         var acc = document.getElementsByClassName("accordion");
+         var i;
+         
+         for (i = 0; i < acc.length; i++) {
+           acc[i].addEventListener("click", function() {
+             this.classList.toggle("active");
+             var panel = this.nextElementSibling;
+             if (panel.style.maxHeight) {
+               panel.style.maxHeight = null;
+             } else {
+               panel.style.maxHeight = panel.scrollHeight + "px";
+             }
+           });
+         }
+         
+         								
+      </script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+   </body>
+</html>
